[NOJIRA-000]: Get authenticated user info
